tooling/nargo_cli/tests/snapshots/compile_failure/mutability_regression_2911/execute__tests__mutability_regression_2911_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected type &mut [Field], found type &mut [_; 0]
  ┌─ src/main.nr:3:32
  │
3 │     let slice : &mut [Field] = &mut [];
  │                                -------
  │

error: Variable `slice` must be mutable to be assigned to
  ┌─ src/main.nr:4:5
  │
4 │     slice = &mut (*slice).push_back(1);
  │     -----
  │

Aborting due to 2 previous errors
